--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+
+/config/secrets.yml
+/config/database.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
